fix - tirar scrollbar de index.html
alteração no tamanho da mainDiv para remover scroll da tela

--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -41,7 +41,7 @@ header nav .ul-nav li a {
 
 .mainDiv {
     display: flex;
-    height: 75vh;
+    height: 68vh;
     border-radius: 20px;
     margin: 5vh 5wh;
 }
